0.06 20091102
    . added 'autoclose' parameter to specify whether the
      tab that mechanize creates gets automatically closed upon
      object release
    . added ->content_as_png() to save the current page
      as PNG
    . Added 'single' option to ->selector() and ->xpath()
    . Added capture of arbitrary rectangles to ->content_as_png()
    . added ->find_link APIs
    . added ->find_link tests from WWW::Mechanize

0.05 20091030
    . Added HTTP::Cookies::MozRepl to allow for live cookie querying
    . Added ->cookies method for cookie access

0.04 20091029
    . Added ->set_visible
    . Added ->value (partly buggy with respect to event triggering)
    . added log passthrough parameter

0.03 20091028
    . Added missing MIME::Base64 prerequisite
    . Now has WWW::Mechanize as a prerequisite
    . Also requires MozRepl::RemoteObject 0.2 due to the changed call
      interface and introduction of ->declare for caching.

0.02 20091027
    . rearranged documentation
    . made tests skip if we can't connect to MozRepl

0.01 20091026
    . Released unto a propably suspecting audience