@@ -8,6 +8,7 @@
     . Added capture of arbitrary rectangles to ->content_as_png()
     . added ->find_link APIs
     . added ->find_link tests from WWW::Mechanize
+    . added sending of focus/change/blur events and API
 
 0.05 20091030
     . Added HTTP::Cookies::MozRepl to allow for live cookie querying
